--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
     "color-thief-ts": "^1.1.1",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
