--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
-    "color-thief-ts": "^1.1.1",
     "lucide-react": "^0.344.0",
+    "node-vibrant": "^3.1.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
